src/objects/npo02__Households_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Matched_Donor_Role__c</fullName>
        <description>The Contact Role you want to use for matched donors. We recommend using &quot;Matched Donor.&quot;</description>
        <inlineHelpText>The Contact Role you want to use for matched donors. We recommend using &quot;Matched Donor.&quot;</inlineHelpText>
        <label>Matched Donor Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seasonal_Addresses_Batch_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Number of records per batch to process when setting seasonal address as the mailing address.</description>
        <inlineHelpText>Number of records per batch to process when setting seasonal address as the mailing address.</inlineHelpText>
        <label>Seasonal Address Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Dated_Conversion_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to use Dated Conversion Rates when Advanced Currency Management is enabled in this Organization. If unchecked and ACM is enabled, all NPSP roll-ups will use the default exchange rate for by currency.</inlineHelpText>
        <label>Use Dated Conversion Rates if available</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>